# quadcraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
res/shaders/: main.frag  main.vert  pathtracer.comp  pixel_aa.frag  quad.frag  quad.vert
res/tiles/: tiledefs.yaml
src/: application.cpp  application.hpp  block_type.c  block_type.cpp  block_type.h  block_type.hpp  camera.c  camera.cpp  camera.h  camera.hpp  chunk.c  chunk.cpp  chunk.h  chunk.hpp  chunk_mesh.c  chunk_mesh.h  device.cpp  device.hpp  direction.cpp  direction.hpp  extensions.cpp  lmath.c  lmath.h  main.c  main.cpp  math2d.c  math2d.h  swapchain.cpp  swapchain.hpp  tiles.cpp  tiles.hpp  utils.c  utils.h
